--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="top">
     <img class="img1" src="images/cloud.png" alt="cloud-image">
     <h1>I'm Soumyadeep</h1>
-    <p> <h2> A <span>Pro</span>grammer  </h2></p>
+    <p> <h2 style="padding-top:0 ;"> A <span>Pro</span>grammer  </h2></p>
     <img class="img2" src="images/cloud.png" alt="cloud-image">
     <img class="img3"src="images/mountain.png" alt="mountain-image">
 
@@ -30,7 +30,7 @@
     <div class="profile">
       <img class="img4" src="images/soumyadeep.png" alt="Soumyadeep image">
       <h2>Hello.</h2>
-      <p>I'm Graduated in Electronics and Communication Engineering From Dr.Sudhir Chandra Sur degree Engineering College.</p>
+      <p style="font-size: 2rem;">I'm Graduated in Electronics and Communication Engineering From Dr.Sudhir Chandra Sur degree Engineering College.</p>
     </div>
     <hr>
     <div class="skills">
@@ -50,10 +50,20 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>If you love to do Editing </h3>
-      <p>If you love to do editing as much i do?Let's Talk about how to make more creative! We can edit & Code Together. to</p>
+      <p style="font-size: 1.5rem;">If you love to do editing as much i do?Let's Talk about how to make more creative!
+        <br> We can edit & Code Together. to</p>
       <a class="btn" href="Soumyadeepmandal50@gmail.com">CONTACT ME</a>
     </div>
   </div>
+
+
+  <div class="bottom">
+    <a class="footer-link" href="https://www.linkedin.com/in/soumyadeep-mandal-455b04173/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/soumyadeep_00">Twitter</a>
+    <a class="footer-link" href="https://www.instagram.com/ig__srt">Instagram</a>
+    <p class="end-foot">©Soumyadeep Mandal.</p>
+  </div>
+</html>
 
 
   <div class="bottom">
