--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <div class="middle">
     <div class="profile">
-      <img class="img4" src="images/soumyadeep.png" alt="Soumyadeep image">
+      <img class="img4" src="images/Soumyadeep.png" alt="Soumyadeep image">
       <h2>Hello.</h2>
       <p class="intro">I'm Graduated in Electronics and Communication Engineering From Dr.Sudhir Chandra Sur degree Engineering College.</p>
     </div>
