--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <h2>Get In Touch</h2>
       <h3>If you love to do Editing </h3>
       <p class="if-you">If you love to do editing as much i do?Let's Talk about how to make more creative!
-        <br> We can edit & Code Together. to</p>
+        <br> We can edit & Code Together..</p>
       <a class="btn" href="Soumyadeepmandal50@gmail.com">CONTACT ME</a>
     </div>
   </div>
@@ -61,9 +61,6 @@
     <a class="footer-link" href="https://www.linkedin.com/in/soumyadeep-mandal-455b04173/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/soumyadeep_00">Twitter</a>
     <a class="footer-link" href="https://www.instagram.com/ig__srt">Instagram</a>
-    <p class="end-foot">©Soumyadeep Mandal.</p>
+    <p class="coppyright">© 2022 Soumyadeep Mandal.</p>
   </div>
 </html>
-
-
-  
