--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h3>If you love to do Editing </h3>
       <p class="if-you">If you love to do editing as much i do?Let's Talk about how to make more creative!
         <br> We can edit & Code Together..</p>
-      <a class="btn" href="Soumyadeepmandal50@gmail.com">CONTACT ME</a>
+      <a class="btn" href="contacts.html">CONTACT ME</a>
     </div>
   </div>
 
